:sparkles: feat[playerApi]: Implemented Saturation
:wrench: fix[translation]: fixed some object creation and loading
